--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       </div>
         </nav>
       <div class="hero-text-box">
-        <h1>Sistema generador de tickets
-            de venta.</h1>
+        <h1>SISTEMA ESCOLAR</h1>
  
         <a class="btn btn-b" href="login.php">Inicia Sesión</a>
       </div>
