--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="hero-text-box">
         <h1>SISTEMA ESCOLAR</h1>
  
-        <a class="btn btn-b" href="login.php">Inicia Sesión</a>
+        <a class="btn btn-b" href="login2.php">Inicia Sesión</a>
       </div>
       
     </header>
