--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ ul {
 .showcase {
   width: 100%;
   height: 200px;
-  background: url('http://edu.jalisco.gob.mx/estudiaen/sites/edu.jalisco.gob.mx.estudiaen/files/CintaCETI.png') no-repeat center center/cover;
+  background: url('http://www.edu.jalisco.gob.mx/sites/default/files/CintaCETI.png') no-repeat center center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
